[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlite-anyio"
description = "Asynchronous client for SQLite using AnyIO"
readme = "README.md"
authors = [
    {name = "Alex Grönholm", email = "alex.gronholm@nextday.fi"},
    {name = "David Brochart", email = "david.brochart@gmail.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Topic :: Database",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">= 3.8"
dependencies = [
    "anyio >=4.0,<5.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest >=8,<9",
    "trio >=0.24.0,<0.25",
    "mypy",
    "coverage[toml] >=7,<8",
]

[project.urls]
Source = "https://github.com/davidbrochart/sqlite-anyio"
Issues = "https://github.com/davidbrochart/sqlite-anyio/issues"

[tool.hatch.version]
path = "sqlite_anyio/__init__.py"

[tool.coverage.run]
source = ["sqlite_anyio", "tests"]

[tool.coverage.report]
show_missing = true
