[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "sqlite-anyio"
description = "Asynchronous client for SQLite using AnyIO"
readme = "README.md"
version = "0.2.5"
authors = [
    {name = "Alex Grönholm", email = "alex.gronholm@nextday.fi"},
    {name = "David Brochart", email = "david.brochart@gmail.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Topic :: Database",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">= 3.10"
dependencies = [
    "anyio >=4.0,<5.0",
]

[dependency-groups]
test = [
    "pytest >=9,<10",
    "trio >=0.32.0,<1",
    "mypy",
    "coverage",
]

[project.urls]
Source = "https://github.com/davidbrochart/sqlite-anyio"
Issues = "https://github.com/davidbrochart/sqlite-anyio/issues"

[tool.coverage.run]
source = ["sqlite_anyio", "tests"]

[tool.coverage.report]
show_missing = true
